     matches a valid MPI Details section
  3. Look for an mpi_install field is any MPI Details section that
     matches the current MPI Install phase
  4. Look for an mpi_get field is any MPI Details section that matches
     the current MPI Get phase
  5. If we didn't find anything above, take the first MPI Details
     section we find

- Cluster description strings for the below fields can be overridden
  in the [MPI Install] and [MTT] INI sections
  - platform_type
  - platform_hardware
  - os_name
  - os_version

- Added "description" field in MTT, MPI install, Test build, and Test
  run sections.  If not set in MPI Install/Test build/Test run
  sections, will use the value from the MTT section.

- Added "log_file" field in [MTT] section

- Added "funclet_files" field into [MTT] section, allowing a
  comma-delimited list of .pm files to add more funclets to MTT.

- Allow timeouts to be specified in [HH:[MM:]]SS format in the ini file.

- before_any, before_each, after_any, and after_each steps can be set to
  funclets

- Added "INI_NAME" as a predefined INI parameter (a la Perl's $PROGRAM_NAME)

- Added "PROGRAM_NAME" as a predefined INI parameter (a la Perl's
  $PROGRAM_NAME)

- Added several performance stdout analyzers:
  - NBC Bench
  - OSU benchmarks
  - SKaMPI
  - IMB
  - NetPIPE

- Added include_section. include_section takes a CSV of INI section names and
  interpolates those sections into the current INI section, allowing the user
  to factor down an INI file. Note: --section filtering is performed *after*
  the interpolation, so there is no need to supply "include" sections to the 
  --section option. (See samples/ompi-core-template.ini for examples)

- New options:
  - --no-force
  - --no-reporter

- New MPI install INI params used to do *stuff* before and/or after an MPI
  Install (e.g., create a tarball, install on cluster):
  - before_install
  - before_install_timeout
  - after_install
  - after_install_timeout